crates/murphy-plugin-macros/tests/ui/fail_node_pattern_parse_error.stderr
error: node_pattern!: pattern parse error: unknown node type `sned` (at 1..5)
 --> tests/ui/fail_node_pattern_parse_error.rs:4:40
  |
4 | murphy_plugin_macros::node_pattern!(m, "(sned _)");
  |                                        ^^^^^^^^^^
